# VirtOrgGov

./: Cargo.toml
src/: main.rs  schema.rs
src/api/: mod.rs
src/orm/: mod.rs
src/pages/: mod.rs
src/templates/: mod.rs
templates/: base.html  changeLaw.html  index.html  laws.html
