[package]
name = "virt_org_gov"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1", features = ["with-actix-web"]}
askama_actix = "0.13.0"

actix-web = { version = "4.0.1", default-features = false, features = ["macros","rustls"] }
actix-files = "0.6.0"
actix-rt = "2.6"

tracing = "0.1.13"
tracing-subscriber = { version = "0.3.11" }
tracing-actix-web = "0.5.1"

diesel = {version = "1.4.8", features = ["postgres","extras"]}
uuid = {version = "^0.6", features = ["serde","v5"]}
chrono = "0.4"

serde = "1.0.136"
deadpool-diesel = { version = "0.3.1", features = ["postgres","rt_tokio_1","serde"] }
clap = { version =  "3.1.8" , features = ["derive"] }
